--- a/ic3.cabal
+++ b/ic3.cabal
@@ -6,3 +6,4 @@ Build-Type:     Simple
 Executable hctigar
   Main-Is:              Main.hs
   Build-Depends:        base,vector,bindings-llvm,fgl,pqueue,containers,smtlib2,smtlib2-debug,array,resource-pool,mtl
+  GHC-Options:          -threaded
