--- a/ic3.cabal
+++ b/ic3.cabal
@@ -5,5 +5,5 @@ Build-Type:     Simple
 
 Executable hctigar
   Main-Is:              Main.hs
-  Build-Depends:        base,vector,bindings-llvm,fgl,pqueue,containers,smtlib2,smtlib2-debug,array,resource-pool,mtl
+  Build-Depends:        base,vector,bindings-llvm,fgl,pqueue,containers,smtlib2,smtlib2-debug,array,resource-pool,mtl,bytestring,attoparsec<0.11,atto-lisp,text
   GHC-Options:          -threaded
