Add new dependency on datatype emulator to CTIGAR

--- a/ic3.cabal
+++ b/ic3.cabal
@@ -20,4 +20,4 @@ Executable vvt-pp
 
 Executable vvt-bmc
   Main-Is:              bin/BMC.hs
-  Build-Depends:        smtlib2,smtlib2-debug
+  Build-Depends:        smtlib2,smtlib2-debug,smtlib2-emulated-datatypes
