--- a/ic3.cabal
+++ b/ic3.cabal
@@ -2,6 +2,9 @@ Name:           hctigar
 Version:        0.1
 Cabal-Version:  >= 1.2
 Build-Type:     Simple
+Data-Files:     include/assert.h
+                include/pthread.h
+                include/stdlib.h
 
 --Executable hctigar
 --  Main-Is:              Main.hs
@@ -29,4 +32,12 @@ Executable vvt-enc
 
 Executable vvt-verify
   Main-Is:              bin/Verify.hs
+  GHC-Options:          -threaded
+
+Executable vvt-predicates
+  Main-Is:              bin/Predicates.hs
+
+Executable vvt
+  Main-Is:              bin/Main.hs
+  Build-Depends:        process,filepath
   GHC-Options:          -threaded
