BMC tool working

--- a/ic3.cabal
+++ b/ic3.cabal
@@ -19,29 +19,33 @@ Data-Files:     include/assert.h
 --  Main-Is:              bin/Karr.hs
 --  Build-Depends:        base,vector,smtlib2
 
-Executable vvt-pp
-  Main-Is:              bin/Pretty.hs
-  Build-Depends:        base,bytestring,atto-lisp,attoparsec<0.13,text,pretty
+--Executable vvt-pp
+--  Main-Is:              bin/Pretty.hs
+--  Build-Depends:        base,bytestring,atto-lisp,attoparsec,text,pretty
 
 Executable vvt-bmc
-  Main-Is:              bin/BMC.hs
-  Build-Depends:        mtl,containers,constraints,data-fix,smtlib2,smtlib2-debug,smtlib2-emulated-datatypes
+ Main-Is:              bin/BMC.hs
+ Extensions:           TemplateHaskell,QuasiQuotes,DataKinds,GADTs,RankNTypes,TypeFamilies,FlexibleInstances,TypeOperators,PolyKinds,ViewPatterns,ScopedTypeVariables,OverloadedStrings,FlexibleContexts,StandaloneDeriving,MultiParamTypeClasses,ImpredicativeTypes
+ Build-Depends:        base,mtl,containers,constraints,data-fix,smtlib2,smtlib2-pipe,smtlib2-z3,smtlib2-debug,atto-lisp,bytestring,attoparsec,text,dependent-sum,dependent-map,transformers
 
-Executable vvt-enc
-  Main-Is:              bin/Encode.hs
-  Build-Depends:        bindings-llvm,fgl,array,linear,vector,time,pqueue,smtlib2-emulated-modulus,smtlib2-timing,resource-pool
+--Executable vvt-enc
+--  Main-Is:              bin/Encode.hs
+--  Build-Depends:        bindings-llvm,fgl,array,linear,vector,time,pqueue,smtlib2-emulated-modulus,smtlib2-timing,resource-pool
 
-Executable vvt-verify
-  Main-Is:              bin/Verify.hs
-  GHC-Options:          -threaded
+-- Executable vvt-verify
+--   Main-Is:              bin/Verify.hs
+--   GHC-Options:          -threaded
+--   Build-Depends:        base, smtlib2, smtlib2-debug, smtlib2-pipe, containers, vector, pqueue, fgl, time, mtl,
+--                         dependent-sum, text, atto-lisp, constraints, bytestring, attoparsec, transformers, resource-pool, dependent-map
+--   Extensions:           TemplateHaskell,QuasiQuotes,DataKinds,GADTs,RankNTypes,TypeFamilies,FlexibleInstances,TypeOperators,PolyKinds,ViewPatterns,ScopedTypeVariables,OverloadedStrings,FlexibleContexts,StandaloneDeriving,MultiParamTypeClasses,ImpredicativeTypes
 
-Executable vvt-predicates
-  Main-Is:              bin/Predicates.hs
+--Executable vvt-predicates
+--  Main-Is:              bin/Predicates.hs
 
-Executable vvt-opt
-  Main-Is:              bin/Optimize.hs
+--Executable vvt-opt
+--  Main-Is:              bin/Optimize.hs
   
-Executable vvt
-  Main-Is:              bin/Main.hs
-  Build-Depends:        process,filepath
-  GHC-Options:          -threaded
+--Executable vvt
+--  Main-Is:              bin/Main.hs
+--  Build-Depends:        process,filepath
+--  GHC-Options:          -threaded
