--- a/test/svcomp/Makefile
+++ b/test/svcomp/Makefile
@@ -3,6 +3,7 @@ LIPTON=/home/eq/repos/lipton/LiptonPass
 CLANG=clang-3.4
 CLANG_OPTS=-mem2reg -internalize-public-api-list=main -internalize -inline -loops -loop-simplify -loop-rotate -lcssa -loop-unroll
 LIPTON_OPT=-mem2reg -constprop -instsimplify -correlated-propagation -die -simplifycfg -globaldce -instnamer
+VVT_OPT=value-set=5 inline simplify
 TIMEOUT=15m
 
 BENCHMARKS=$(shell grep -v ^\# benchmarks )
@@ -49,16 +50,16 @@ $(LIPTON_S_FILES): %.lipton-s.ll: %.ll
 vvt_files: $(VVT_FILES) $(VVT_Y_FILES) $(VVT_N_FILES) $(VVT_S_FILES)
 
 $(VVT_FILES): %.l: %.lipton.ll
-	vvt-enc < $< | vvt-opt | vvt-predicates | vvt-pp > $@
+	vvt-enc < $< | vvt-opt $(VVT_OPT) | vvt-predicates | vvt-pp > $@
 
 $(VVT_Y_FILES): %.y.l: %.lipton-y.ll
-	vvt-enc < $< | vvt-opt | vvt-predicates | vvt-pp > $@
+	vvt-enc < $< | vvt-opt $(VVT_OPT) | vvt-predicates | vvt-pp > $@
 
 $(VVT_N_FILES): %.n.l: %.lipton-n.ll
-	vvt-enc < $< | vvt-opt | vvt-predicates | vvt-pp > $@
+	vvt-enc < $< | vvt-opt $(VVT_OPT) | vvt-predicates | vvt-pp > $@
 
 $(VVT_S_FILES): %.s.l: %.lipton-s.ll
-	vvt-enc < $< | vvt-opt | vvt-predicates | vvt-pp > $@
+	vvt-enc < $< | vvt-opt $(VVT_OPT) | vvt-predicates | vvt-pp > $@
 
 output_files: $(OUTPUT_FILES) $(OUTPUT_Y_FILES) $(OUTPUT_N_FILES) $(OUTPUT_S_FILES)
 
@@ -78,4 +79,7 @@ time.dat: output_files
 	./extract.sh time > time.dat
 
 clean:
-	rm -f $(LLVM_FILES) $(LIPTON_FILES) $(VVT_FILES) $(OUTPUT_FILES)
+	rm -f $(LLVM_FILES)\
+              $(LIPTON_FILES) $(LIPTON_Y_FILES) $(LIPTON_N_FILES) $(LIPTON_S_FILES)\
+              $(VVT_FILES) $(VVT_Y_FILES) $(VVT_N_FILES) $(VVT_S_FILES)\
+              $(OUTPUT_FILES) $(OUTPUT_Y_FILES) $(OUTPUT_N_FILES) $(OUTPUT_S_FILES)
