--- a/ic3.cabal
+++ b/ic3.cabal
@@ -39,7 +39,7 @@ Executable vvt-predicates
   Main-Is:              bin/Predicates.hs
 
 Executable vvt-opt
-  Extensions:           ViewPatterns
+  Extensions:           ViewPatterns,GADTs
   Main-Is:              bin/Optimize.hs
   
 Executable vvt
