--- a/ic3.cabal
+++ b/ic3.cabal
@@ -26,18 +26,18 @@ Flag Native-MathSAT
 --  Main-Is:              bin/Karr.hs
 --  Build-Depends:        base,vector,smtlib2
 
---Executable vvt-pp
---  Main-Is:              bin/Pretty.hs
---  Build-Depends:        base,bytestring,atto-lisp,attoparsec,text,pretty
+Executable vvt-pp
+  Main-Is:              bin/Pretty.hs
+  Build-Depends:        base,bytestring,atto-lisp,attoparsec,text,pretty
 
---Executable vvt-bmc
--- Main-Is:              bin/BMC.hs
--- Extensions:           TemplateHaskell,QuasiQuotes,DataKinds,GADTs,RankNTypes,TypeFamilies,FlexibleInstances,TypeOperators,PolyKinds,ViewPatterns,ScopedTypeVariables,OverloadedStrings,FlexibleContexts,StandaloneDeriving,MultiParamTypeClasses,ImpredicativeTypes
--- Build-Depends:        base,mtl,containers,constraints,data-fix,smtlib2,smtlib2-pipe,smtlib2-z3,smtlib2-debug,atto-lisp,bytestring,attoparsec,text,dependent-sum,dependent-map,transformers,time
+Executable vvt-bmc
+  Main-Is:              bin/BMC.hs
+  Extensions:           TemplateHaskell,QuasiQuotes,DataKinds,GADTs,RankNTypes,TypeFamilies,FlexibleInstances,TypeOperators,PolyKinds,ViewPatterns,ScopedTypeVariables,OverloadedStrings,FlexibleContexts,StandaloneDeriving,MultiParamTypeClasses,ImpredicativeTypes
+  Build-Depends:        base,mtl,containers,constraints,data-fix,smtlib2,smtlib2-pipe,smtlib2-z3,smtlib2-debug,atto-lisp,bytestring,attoparsec,text,dependent-sum,dependent-map,transformers,time
 
---Executable vvt-enc
---  Main-Is:              bin/Encode.hs
---  Build-Depends:        bindings-llvm,fgl,array,linear,vector,time,pqueue,smtlib2-emulated-modulus,smtlib2-timing,resource-pool
+-- --Executable vvt-enc
+-- --  Main-Is:              bin/Encode.hs
+-- --  Build-Depends:        bindings-llvm,fgl,array,linear,vector,time,pqueue,smtlib2-emulated-modulus,smtlib2-timing,resource-pool
 
 Executable vvt-verify
   Main-Is:              bin/Verify.hs
@@ -57,10 +57,12 @@ Executable vvt-predicates
   Extensions:           RankNTypes,KindSignatures,DataKinds,TypeFamilies,FlexibleContexts,MultiParamTypeClasses,QuasiQuotes,StandaloneDeriving,GADTs,TypeOperators,ScopedTypeVariables,PolyKinds,ViewPatterns,FlexibleInstances,OverloadedStrings,GeneralizedNewtypeDeriving
   Main-Is:              bin/Predicates.hs
 
---Executable vvt-opt
---  Main-Is:              bin/Optimize.hs
+-- Executable vvt-opt
+--   Build-Depends:        base,mtl,dependent-sum,dependent-map,bytestring,attoparsec,atto-lisp,transformers,containers,text,constraints,smtlib2 >= 0.3,smtlib2-pipe,smtlib2-debug
+--   Extensions:           RankNTypes,KindSignatures,DataKinds,TypeFamilies,FlexibleContexts,MultiParamTypeClasses,QuasiQuotes,StandaloneDeriving,GADTs,TypeOperators,ScopedTypeVariables,PolyKinds,ViewPatterns,FlexibleInstances,OverloadedStrings,GeneralizedNewtypeDeriving
+--   Main-Is:              bin/Optimize.hs
   
---Executable vvt
+--executable vvt
 --  Main-Is:              bin/Main.hs
 --  Build-Depends:        process,filepath
 --  GHC-Options:          -threaded
